[core] update swagger core
